<resources>
    <string name="app_name">Souvenotes</string>

    <!-- Login -->
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="submit">Submit</string>
    <string name="login_error">Unable to log in</string>
    <string name="title_login">Log In To Souvenotes</string>
    <string name="error_credentials">Incorrect password</string>
    <string name="error_account">No account exists for this email address</string>

    <!-- Login Options -->
    <string name="title_login_options">Log In Or Sign Up</string>
    <string name="option_login">Log In</string>
    <string name="option_register">Sign Up</string>

    <!-- Registration -->
    <string name="title_registration">Create Account</string>
    <string name="email_format">Not a valid email address</string>
    <string name="poor_password">Password does not match criteria</string>
    <string name="password_empty">Empty password</string>
    <string name="password_short">Password is too short</string>
    <string name="password_missing_letter">Password must contain at least one letter</string>
    <string name="password_missing_number">Password must contain at least one number</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="password_criteria">Your password must contain at least 8 characters, one letter, and one number.</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_error">Unable to complete sign up</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Password Reset -->
    <string name="title_reset_password">Reset Password</string>
    <string name="reset_password_error">Unable to reset password</string>
    <string name="action_reset">Reset</string>
    <string name="reset_email_sent">Password reset email sent. It may take several minutes to arrive.</string>

    <!-- Notes List -->
    <string name="title_notes">Notes</string>
    <string name="empty_list">Add a note using the button below</string>
    <string name="fab_content_description">Add Note</string>
    <string name="last_updated">Last Updated: %s</string>
    <string name="max_notes">You have reached the maximum number of notes.</string>
    <string name="load_notes_error">An error occurred loading your notes. Please try again later.</string>
    <string name="message_delete">Do you want to delete this note?</string>
    <string name="option_delete">Delete</string>
    <string name="delete_error">Unable to delete note. Please try again later.</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>

    <!-- Notes -->
    <string name="hint_title">Enter title</string>
    <string name="hint_content">Enter note</string>
    <string name="untitled">Untitled</string>
    <string name="note_load_error">Unable to load note. Please try again later.</string>
    <string name="add_note_error">Unable to add note</string>
    <string name="update_note_error">Unable to update note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="title_add_note">Add Note</string>

    <!-- Menu -->
    <string name="action_logout">Logout</string>

    <!-- Settings -->
    <string name="change_email">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_settings">Settings</string>

    <!-- Reauth -->
    <string name="reauth_error">Unable to confirm credentials</string>
    <string name="action_submit">Submit</string>
    <string name="log_back_in">Please log back in to complete this action.</string>
    <string name="re_enter_password">Please re-enter your current password</string>

    <!-- Change Email -->
    <string name="email_exists">This email address is unavailable.</string>
    <string name="change_email_error">Unable to change email address. Please try again later.</string>
    <string name="hint_change_email">Enter new email address</string>
    <string name="email_change_success">Email address successfully changed</string>

    <!-- Change Password -->
    <string name="change_password_error">Unable to change password. Please try again later.</string>
    <string name="hint_change_password">Enter new password</string>
    <string name="change_password_success">Password successfully changed</string>

    <!-- Delete Account -->
    <string name="delete_account_error">Unable to delete account. Please try again later.</string>
    <string name="delete_message">Deleting your account will permanently delete all of your data. You will not be able to restore it.</string>
    <string name="confirm_delete">Are you sure you want to permanently delete your account and all of your data?</string>

    <!-- Policies -->
    <string name="title_privacy_policy">Souvenotes Privacy Policy</string>
    <string name="title_terms_and_conditions">Souvenotes Terms and Conditions</string>
    <string name="title_error">Error</string>
    <string name="error_privacy">Unable to load privacy policy. Please email\nsouvenotes.app+support@gmail.com\nto report this issue and receive a copy of the privacy policy.</string>
    <string name="error_terms">Unable to load terms and conditions. Please email\nsouvenotes.app+support@gmail.com\nto report this issue and receive a copy of the terms and conditions.</string>
    <string name="policy_agreement">By signing up you agree to our</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="and">and</string>

</resources>
